# gcp-genetic

./: CMakeLists.txt  README.md
include/: genetic.h  graph.h  parser.h
src/: genetic.cpp  graph.cpp  main.cpp  parser.cpp
